# daf_butler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  CITATION.cff  COPYRIGHT  Dockerfile  MANIFEST.in  README.md  SConstruct  build_docs.ini  compose.yml  mypy.ini  nonsense.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  types.txt
.github/: pull_request_template.md
.github/workflows/: build.yaml  build_docs.yaml  codeql-analysis.yml  do_not_merge.yaml  docker.yaml  docstyle.yaml  formatting.yaml  lint.yaml  mypy.yaml  pre-commit.yaml  yamllint.yaml
bin.src/: butler  butler.py  dumpButlerConfig.py  gen3genericConvert.py  makeButlerRepo.py  validateButlerConfiguration.py  visitRegions.py
config/: composites.yaml  dataUnits.yaml  dimensions.yaml  gen2convert.yaml  registry.yaml  registryMap.yaml  registry_schema.yaml  repo_transfer_formats.yaml  schema.yaml  storageClasses.yaml
config/datastores/: composites.yaml  formatters.yaml  posixDatastore.yaml  s3Datastore.yaml  writeRecipes.yaml
config/registry/: default_schema.yaml  storageClasses.yaml
doc/: .gitignore  conf.py  documenteer.toml  index.rst  manifest.yaml  requirements.txt
doc/_static/: README
doc/changes/: DM-13365.feature.rst  DM-21840.misc.rst  DM-22534.misc.rst  DM-26658.feature.rst  DM-27177.removal.rst  DM-27241.feature.rst  DM-27811.removal.md  DM-28650.feature.rst  DM-28678.other.rst  DM-29370.feature.rst  DM-29531.misc.rst  DM-29708.other.rst  DM-29835.feature.rst  DM-30124.bugfix.md  DM-30140.perf  DM-30291.misc.md  DM-30335.misc.rst  DM-30372.bugfix.rst  DM-30373.feature.rst  DM-30685.misc.rst  DM-30743.bugfix.rst  DM-30784.bugfix.rst  DM-30855.bugfix.rst  DM-30935.feature.rst  DM-30948.feature.rst  DM-30977.feature.rst  DM-31120.other.rst  DM-31251.misc.rst  DM-31337.feature.md  DM-31366.feature.rst  DM-31367.feature.rst  DM-31429.bugfix.rst  DM-31548.perf  DM-31583.feature.rst  DM-31596.feature.rst  DM-31623.feature.rst  DM-31700.bugfix.rst  DM-31722.api.rst  DM-31723.api.rst  DM-31725.misc.md  (+356 more)
doc/changes/datastore/: DM-29849.perf  DM-30335.api.rst  DM-33769.feature.rst
doc/changes/registry/: DM-29196.feature  DM-30200.feature.rst  DM-30866.feature.rst  DM-32403.feature.md
doc/daf_butler/: index.rst
doc/lsst.daf.butler/: CHANGES.rst  concreteStorageClasses.rst  configuring.rst  datastores.rst  dimensions.rst  exprParser.rst  formatters.rst  index.rst  organizing.rst  queries.rst  use-in-tests.rst  writing-subcommands.rst
doc/lsst.daf.butler/dev/: dataCoordinate.rst  entryPoints.rst
doc/lsst.daf.butler/scripts/: butler.py.rst  butler.rst  dumpButlerConfig.py.rst  logging.rst  makeButlerRepo.py.rst  options-file.rst  validateButlerConfiguration.py.rst
docker/compose_files/: repository_index.yaml
examples/: createTables.py
python/: SConscript  mypy.ini
python/lsst/: __init__.py
python/lsst/butler/: butler.py  config.py  datasets.py  datastore.py  posixDatastore.py  quantum.py  regions.py  registry.py  run.py  schema.py  storageClass.py  units.py  utils.py
python/lsst_daf_butler.dist-info/: METADATA
requirements/: README.md  docker-test.in  docker-test.txt  docker.in  docker.txt  main.in  test.in  upgrade-deps.sh
server/: requirements.txt
server/scripts/: install-base-packages.sh  install-dependency-packages.sh
tests/: datasetsHelper.py  dummyRegistry.py  exampleFormatters.py  examplePythonTypes.py  testDbAuth.paf  testDbAuth.yaml  test_TestData.py  test_astropyTableFormatter.py  test_authentication.py  test_butler.py  test_butlerFits.py  test_butler_factory.py  test_butler_query.py  test_cliArgumentRepo.py  test_cliCmdAssociate.py  test_cliCmdConfigDump.py  test_cliCmdConfigValidate.py  test_cliCmdCreate.py  test_cliCmdImport.py  test_cliCmdIngestFiles.py  test_cliCmdInstallExternalData.py  test_cliCmdPruneCollection.py  test_cliCmdPruneDatasets.py  test_cliCmdQueryCollections.py  test_cliCmdQueryDataIds.py  test_cliCmdQueryDatasetTypes.py  test_cliCmdQueryDatasets.py  test_cliCmdQueryDimensionRecords.py  test_cliCmdRemoveCollections.py  test_cliCmdRemoveRuns.py  test_cliCmdRetrieveArtifacts.py  test_cliLog.py  test_cliLogLogState.py  test_cliOption.py  test_cliOptionDatasetType.py  test_cliOptionTransfer.py  test_cliPluginLoader.py  test_cliUtilSplitCommas.py  test_cliUtilSplitKv.py  test_cliUtilToUpper.py  (+84 more)
tests/config/basic/: butler-chained-posix.yaml  butler-chained.yaml  butler-inmemory-chain.yaml  butler-inmemory.yaml  butler-rds.yaml  butler-s3rds.yaml  butler-s3store.yaml  butler-webdavstore.yaml  butler.yaml  chainedDatastore.yaml  chainedDatastore2.yaml  chainedDatastore2P.yaml  chainedDatastoreP.yaml  chainedDatastorePa.yaml  chainedDatastorePb.yaml  chainedDatastorePosix.yaml  composites-bad.yaml  composites.yaml  formatters.yaml  inMemoryDatastore.yaml  inMemoryDatastoreP.yaml  obscore.yaml  posixDatastore.yaml  posixDatastore2.yaml  posixDatastore2P.yaml  posixDatastoreNoChecksums.yaml  posixDatastoreP.yaml  rdsRegistry.yaml  s3Datastore.yaml  server.yaml  sqliteRegistry.yaml  storageClasses.yaml  templates.yaml  webdavDatastore.yaml
tests/config/dbAuth/: db-auth.yaml  regMapTest.yaml  registryConf1.yaml  registryConf2.yaml  registryConf3.yaml  registryConf4.yaml  registryConf5.yaml  registryConf6.yaml
tests/config/dimensions/: dimensions1.yaml  dimensions2.yaml  dimensions3.yaml  dimensions4.yaml
tests/config/templates/: templates-bad.yaml  templates-nodefault.yaml  templates-nodefault2.yaml  templates-withdefault.yaml
tests/config/testConfigs/: abspath.yaml  configIncludes.json  configIncludes.yaml  configIncludesEnv.yaml  testconfig.yaml  testinclude.yaml  viacls.yaml  viacls2.json  viacls2.yaml  withcls.yaml
tests/data/: config-overrides.yaml  zip_index.json  zip_index_with_records.json
tests/data/basic/: detector_1.yaml  detector_2.yaml  detectors.yaml  small.fits
tests/data/ci_hsc/: AbstractFilter.npy  Dataset.npy  DatasetType.npy  DatasetTypeUnits.npy  Dataset_raw.npy  (+18 more)
tests_integration/: test_docker_container.py
ups/: butler.table  butler_prototype.table  daf_butler.cfg  daf_butler.table
(+863 files in other folders)
