[build-system]
requires = ["setuptools", "lsst-versions >= 1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst-daf-butler"
requires-python = ">=3.11.0"
description = "An abstraction layer for reading and writing astronomical data to datastores."
license = {text = "BSD 3-Clause License"}
readme = "README.md"
authors = [
    {name="Rubin Observatory Data Management", email="dm-admin@lists.lsst.org"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["lsst"]
dependencies = [
    "astropy >=4.0",
    "pyyaml >=5.1",
    "sqlalchemy >=1.4",
    "click >= 7.0",
    "lsst-sphgeom",
    "lsst-utils",
    "lsst-resources",
    "lsst-daf-relation",
    "deprecated >= 1.2",
    "pydantic <3.0",
]

dynamic = ["version"]
[project.urls]
"Homepage" = "https://github.com/lsst/daf_butler"

[project.optional-dependencies]
postgres = ["psycopg2"]
server = [
    "fastapi",
    "safir >= 3.4.0"
]
test = [
    "pytest >= 3.2",
    "pytest-openfiles >= 0.5.0",
    "numpy >= 1.17",
    "matplotlib >= 3.0.3",
    "pyarrow >= 0.16",
    "pandas >= 1.0",
]
# Also expose the optional dependencies of lsst-resources as optional
# dependencies of lsst-daf-butler.  lsst-daf-butler itself doesn't care what
# resource methods are available, but the client of lsst-daf-butler may view
# it as a black box and lsst-resources as an internal implementation detail,
# and therefore may find it more logical to specify optional dependencies
# here.
s3 = ["lsst-resources[s3]"]
https = ["lsst-resources[https]"]
gs = ["lsst-resources[gs]"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools]
zip-safe = true
license-files = ["COPYRIGHT", "LICENSE", "bsd_license.txt", "gpl-v3.0.txt"]

[tool.setuptools.package-data]
"lsst.daf.butler" = ["py.typed", "configs/*.yaml", "configs/*/*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "lsst_versions.get_lsst_version" }

[project.scripts]
butler = "lsst.daf.butler.cli.butler:main"


[tool.towncrier]
    package = "lsst.daf.butler"
    package_dir = "python"
    filename = "doc/lsst.daf.butler/CHANGES.rst"
    directory = "doc/changes"
    title_format = "Butler {version} {project_date}"
    issue_format = "`{issue} <https://jira.lsstcorp.org/browse/{issue}>`_"

    [[tool.towncrier.type]]
        directory = "feature"
        name = "New Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug Fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "perf"
        name = "Performance Enhancement"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Other Changes and Additions"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "An API Removal or Deprecation"
        showcontent = true

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.lsst_versions]
write_to = "python/lsst/daf/butler/version.py"

[tool.pytest.ini_options]
# The matplotlib test may not release font files.
# Some unit tests open registry database in setUpClass.
open_files_ignore = ["*.ttf", "gen3.sqlite3"]
# These require additional environment setup that isn't available during
# normal unit test runs
addopts = "--ignore=tests_integration"

[tool.pydocstyle]
convention = "numpy"
# Our coding style does not require docstrings for magic methods (D105)
# Our docstyle documents __init__ at the class level (D107)
# We allow methods to inherit docstrings and this is not compatible with D102.
# Docstring at the very first line is not required
# D200, D205 and D400 all complain if the first sentence of the docstring does
# not fit on one line. We do not require docstrings in __init__ files (D104).
add-ignore = ["D107", "D105", "D102", "D100", "D200", "D205", "D400", "D104"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
exclude = [
    "__init__.py",
    "lex.py",
    "yacc.py",
]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N816",
    "N999",
    "D107",
    "D105",
    "D102",
    "D104",
    "D100",
    "D200",
    "D205",
    "D400",
]
line-length = 110
select = [
    "E",  # pycodestyle
    "F",  # pycodestyle
    "N",  # pep8-naming
    "W",  # pycodestyle
    "D",  # pydocstyle
]
target-version = "py311"
# Commented out to suppress "unused noqa" in jenkins which has older ruff not
# generating E721.
#extend-select = [
#    "RUF100", # Warn about unused noqa
#]

[tool.ruff.per-file-ignores]
# parserYacc docstrings can not be fixed. Docstrings are used to define grammar.
"python/lsst/daf/butler/registry/queries/expressions/parser/parserYacc.py" = ["D401", "D403"]

[tool.ruff.pycodestyle]
max-doc-length = 79

[tool.ruff.pydocstyle]
convention = "numpy"
