[metadata]
name = daf_butler
description = An abstraction layer for reading and writing astronomical data to datastores
author = Rubin Observatory Data Management
url = https://github.com/lsst/daf_butler
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  astropy >=4.0
  pyyaml >=5.1
  sqlalchemy >= 1.03
  click >= 7.0
  lsst_sphgeom > 0.0
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0
  numpy >= 1.17
  matplotlib >= 3.0.3
  pyarrow >= 0.16
  pandas >= 1.0

[options.packages.find]
where=python

[options.package_data]
lsst.daf.butler = configs/*.yaml, configs/*/*.yaml

[options.entry_points]
console_scripts =
  butler = lsst.daf.butler.cli.butler:main

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude = __init__.py
    lex.py
    yacc.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
# The matplotlib test may not release font files
open_files_ignore = "*.ttf"
