[metadata]
name = lsst-daf-butler
description = An abstraction layer for reading and writing astronomical data to datastores
author = Rubin Observatory Data Management
author_email = dm-admin@lists.lsst.org
url = https://github.com/lsst/daf_butler
license = GPLv3+ License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: lsst.daf.butler.__version__

keywords =
    lsst

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  astropy >=4.0
  pyyaml >=5.1
  sqlalchemy >= 1.4
  click >= 7.0
  lsst-sphgeom
  lsst-utils
  lsst-resources
  deprecated >= 1.2
  pydantic
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0
  numpy >= 1.17
  matplotlib >= 3.0.3
  pyarrow >= 0.16
  pandas >= 1.0

[options.packages.find]
where=python

[options.package_data]
lsst.daf.butler = configs/*.yaml, configs/*/*.yaml, py.typed

[options.entry_points]
console_scripts =
  butler = lsst.daf.butler.cli.butler:main

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203, N802, N803, N806, N812, N815, N816
exclude = __init__.py
    lex.py
    yacc.py

[tool:pytest]
addopts = --flake8
flake8-ignore = W503 E203 N802 N803 N806 N812 N815 N816
# The matplotlib test may not release font files.
# Some unit tests open registry database in setUpClass.
open_files_ignore = "*.ttf" "gen3.sqlite3"

[pydocstyle]
convention = numpy
# Our coding style does not require docstrings for magic methods (D105)
# Our docstyle documents __init__ at the class level (D107)
# We allow methods to inherit docstrings and this is not compatible with D102.
# Docstring at the very first line is not required
# D200, D205 and D400 all complain if the first sentence of the docstring does
# not fit on one line.
add-ignore = D107, D105, D102, D100, D200, D205, D400
